[gd_scene load_steps=3 format=3 uid="uid://boc7qiakbaqif"]

[ext_resource type="PackedScene" uid="uid://viawkvmrmwv8" path="res://Characters/Enemy/generic_enemy.tscn" id="1_bscep"]
[ext_resource type="Script" path="res://Characters/Enemy/Drones/Basic Drone/BasicDroneEnemy.gd" id="2_6m6l7"]

[node name="BasicDroneEnemy" instance=ExtResource("1_bscep")]
script = ExtResource("2_6m6l7")

[node name="HitboxSprite" parent="." index="0"]
animation = &"death"
frame_progress = 0.0
script = null

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="3"]
target_desired_distance = 50.0

[node name="NavigationRefresh" type="Timer" parent="NavigationAgent2D" index="0"]
wait_time = 0.1
autostart = true

[connection signal="player_found" from="." to="." method="_on_player_found"]
[connection signal="player_lost" from="." to="." method="_on_player_lost"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="NavigationAgent2D/NavigationRefresh" to="." method="_on_navigation_refresh_timeout"]
